--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ span{
   border-radius: 15px;
 }
 
-.evaluation{
+#evaluation{
     display: block;
 }
 
@@ -112,7 +112,7 @@ button:hover{
 
 
 /*SECOND CARD AFTER RESULTS */
-.second-card{
+#second-card{
     display: none;
 }
 
@@ -144,3 +144,21 @@ align-items: center;
     text-align: center;
 }
 
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    margin-top: 60px;
+  }
+
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+  }
+
+  @media all and (min-width: 400px) {
+html,body{
+        position: absolute;
+        left: 30%;
+    }
+    
+  }
